updated scientific audio

--- a/languages/python_libraries/scientific-audio.txt
+++ b/languages/python_libraries/scientific-audio.txt
@@ -1,4 +1,4 @@
-#### Audio Read-Write
+## Audio Read-Write
 audiolazy=>danilobellini/audiolazy
 audioread=>beetbox/audioread
 mutagen=>https://mutagen.readthedocs.io/
