--- a/languages/javascript_libraries/playlists/p.txt
+++ b/languages/javascript_libraries/playlists/p.txt
@@ -2,3 +2,9 @@
 ##Promise Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/javascript_libraries/promise.txt
 ##Network Layer Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/javascript_libraries/network_layer.txt
 ##Functional Programming Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/javascript_libraries/fp.txt
+
+@@@Client-side JavaScript
+##Learn ReactJS-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/react/react.txt
+
+@@@NodeJS Frameworks
+##ExpressJS-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/expressjs/expressjs.txt
