--- a/languages/expressjs/playlists/p.txt
+++ b/languages/expressjs/playlists/p.txt
@@ -9,4 +9,4 @@
 ##C Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries.txt
 
-{{LANGUAGES:id-->expressjs;Spanish-->es;French-->fr}}
+<!--{{LANGUAGES:id-->expressjs;Spanish-->es;French-->fr}}-->
