--- a/languages/fortran/playlists/p.txt
+++ b/languages/fortran/playlists/p.txt
@@ -5,6 +5,7 @@
 ##Kotlin Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/kotlinreference/kotlinreference.txt
 
 @@@Libraries
+##Fortran Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/fortran/fortran_libraries.txt
 ##C++ Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cpp_libraries.txt
 ##C Libraries--https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries.txt
