--- a/languages/react/playlists/p.txt
+++ b/languages/react/playlists/p.txt
@@ -1,5 +1,8 @@
-@@@JS Frameworks Libraries
+@@@React Libraries
 ##ReactJS Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/react/react_libraries.txt
+##React Hooks-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/react/react_hooks.txt
+
+@@@Other Frameworks Libraries
 ##Angular Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/learn_angular/angular_libraries.txt
 ##Polymer Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/javascript_libraries/polymer_libraries.txt
 
