--- a/languages/javascript_libraries/svg.txt
+++ b/languages/javascript_libraries/svg.txt
@@ -100,3 +100,19 @@ SVG Gradient Background Maker=>https://testdrive-archive.azurewebsites.net/graph
 SVG Gradient Browser Issues=>http://jonibologna.com/svg-gradient-browser-quirks/
 Using svg for flexible scalable and fun backgrounds - part 2=>http://alistapart.com/article/using-svg-for-flexible-scalable-and-fun-backgrounds-part-ii
 Using svg for flexible scalable and fun backgrounds - part 1=>http://alistapart.com/article/using-svg-for-flexible-scalable-and-fun-backgrounds-part-i
+
+## Patterns
+An Overview of SVG Patterns=>http://blogs.adobe.com/dreamweaver/2015/09/svg-patterns.html
+Backgroundify - Very simple background generator=>vltr/bckgrndfy
+Basic of SVG Patterns=>http://apike.ca/prog_svg_patterns.html
+How to use SVG Patterns=>http://designmodo.com/svg-patterns/
+MDN about SVG Patterns=>https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Patterns
+Plain Pattern - Pattern Maker=>http://www.kennethcachia.com/plain-pattern/
+Trianglify - Triangle Pattern Generator=>http://qrohlf.com/trianglify/
+Patternbolt - Pack a pattern svg into css or scss=>http://buseca.github.io/patternbolt/
+Gerstnerizer=>http://eskimoblood.github.io/gerstnerizer/
+Textures.js=>riccardoscalco/textures
+SVG fill patterns=>http://tutorials.jenkov.com/svg/fill-patterns.html
+SVG Patterns Gallery=>http://philbit.com/svgpatterns/
+svg-patterns=>derhuerst/svg-patterns
+SVG quasicrystal generator=>http://berjon.com/quasi/
