--- a/languages/expressjs/playlists/p.txt
+++ b/languages/expressjs/playlists/p.txt
@@ -1,10 +1,14 @@
+@@@Libraries
+##NodeJS Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/node_libraries/node_libraries.txt
+##JavaScript Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/javascript_libraries/javascript_libraries.txt
+
 @@@Native Languages
 ##Erlang Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/erlang/erlang.txt
 ##Fortran Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/fortran/fortran.txt
 ##Ocaml Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/ocaml/ocaml.txt
 ##Kotlin Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/kotlinreference/kotlinreference.txt
 
-@@@Libraries
+@@@Native Libraries
 ##C++ Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cpp_libraries.txt
 ##C Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries.txt
