--- a/languages/flask/playlists/p.txt
+++ b/languages/flask/playlists/p.txt
@@ -1,8 +1,12 @@
 @@@Python Frameworks
 ##Cherrypy Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cherrypy/cherrypy.txt
 
+@@@Python Frameworks
+##Python Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/python_libraries/python_libraries.txt
+
 @@@Client-side JavaScript
 ##Learn ReactJS-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/react/react.txt
+##ReactJS Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/react/react_libraries.txt
 
 @@@NodeJS Frameworks
 ##ExpressJS-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/expressjs/expressjs.txt
