--- a/languages/kotlinreference/playlists/p.txt
+++ b/languages/kotlinreference/playlists/p.txt
@@ -1,11 +1,19 @@
+@@@Libraries
+##Kotlin Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/kotlinreference/kotlin_libraries.txt
+##Groovy Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/groovy/groovy_libraries.txt
+##Dart Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/dart/dart_libraries.txt
+
+@@@Mobile Development
+##Android Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/androidlibraries/androidlibraries.txt
+##Flutter Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/flutter_libraries/flutter_libraries.txt
+
 @@@Native Languages
 ##Julia Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/julia/julia.txt
 ##Fortran Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/fortran/fortran.txt
 ##Ocaml Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/ocaml/ocaml.txt
 ##Erlang Programming Language-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/erlang/erlang.txt
 
-@@@Libraries
+@@@Native Languages
 ##C++ Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cpp_libraries.txt
 ##C Libraries--https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries.txt
-
