--- a/languages/ocaml/playlists/p.txt
+++ b/languages/ocaml/playlists/p.txt
@@ -6,6 +6,6 @@
 @@@Libraries
 ##Ocaml Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/ocaml/ocaml_libraries.txt
 ##C++ Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cpp_libraries/cpp_libraries.txt
-##C Libraries--https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries/c_libraries.txt
+##C Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries/go_libraries.txt
 
