--- a/languages/rustlibraries/playlists/p.txt
+++ b/languages/rustlibraries/playlists/p.txt
@@ -1,6 +1,6 @@
 @@@More Native Libraries
 ##C++ Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cpp_libraries/cpp_libraries.txt
-##C Libraries--https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries/c_libraries.txt
+##C Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/c_libraries/c_libraries.txt
 ##Go Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/go_libraries/go_libraries.txt
 ##Fortran Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/fortran/fortran_libraries.txt
 ##Ocaml Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/ocaml/ocaml_libraries.txt
