--- a/languages/flask/playlists/p.txt
+++ b/languages/flask/playlists/p.txt
@@ -1,8 +1,9 @@
-@@@Python Frameworks
-##Cherrypy Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cherrypy/cherrypy.txt
+@@@Libraries
+##Flask Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/flask/flask_libraries.txt
+##Python Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/python_libraries/python_libraries.txt
 
 @@@Python Frameworks
-##Python Libraries-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/python_libraries/python_libraries.txt
+##Cherrypy Web Framework-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/cherrypy/cherrypy.txt
 
 @@@Client-side JavaScript
 ##Learn ReactJS-->https://raw.githubusercontent.com/Oclemy/sedan/main/languages/react/react.txt
